[package]
name = "gon"
version = "0.2.0"
edition = "2024"

[features]
json = ["serde_json"]
preserve_order = ["indexmap", "serde_json/preserve_order"]
build_bin = ["clap", "preserve_order", "json"]

[dependencies]
klex = { git = "https://www.github.com/speicherwerk/klex", branch = "main", features = ["raw_strings"] }
thiserror = "^2.0.12"
serde_json = { version = "1.0", optional = true }
indexmap = { version = "2.7", optional = true }
clap = { version = "^4.5.31", features = ["derive"], optional = true }
textwrap = "0.16.2"
regex = "1.11.1"

[[bin]]
name = "gon"
required-features = ["build_bin"]
